--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "@hapi/joi": "^17.1.1",
     "axios": "^0.21.3",
     "debug": "4.1.1",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.12",
-    "uuid": "^8.3.2"
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
