--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^0.21.3",
+    "cors": "^2.8.5",
     "debug": "4.1.1",
     "express": "^4.17.1"
   },
